--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/style.css">
+    <title>Coding Quiz</title>
 </head>
 <body>
-    
+    <h1 id= "quiz-title"></h1>
+    <p></p>
+    <ul id="question">
+        <li id="answer1"></li>
+        <li id="answer2"></li>
+        <li id="answer3"></li>
+        <li id="answer4"></li>
+    </ul>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
