--- a/index.html
+++ b/index.html
@@ -8,17 +8,26 @@
     <title>Coding Quiz</title>
   </head>
   <body>
-    <a href="./highscores.html" id="highscores-link">View Highscores</a>
+    <header>
+        <a href="./highscores.html" id="highscores-link">View Highscores</a>
+        <div id="timer">
+            <div id="timer-text">
+                <div id="timer-count">20</div>
+                <p>seconds remaining</p>
+            </div>
+        </div>
+    </header>
     <main id= "main">
-      <h1 id="quiz-title"></h1>
-      <p></p>
-      <ul id="question">
-        <li id="answer1"></li>
-        <li id="answer2"></li>
-        <li id="answer3"></li>
-        <li id="answer4"></li>
+      <h1 id="quiz-title">Quiz Challenge!</h1>
+      <p id= "p-below">Come see if you have what it takes to finish my quiz with your sanity intact!</p>
+      <h3 id= "question">What is the name of the male protagonist in The Legend of Zelda: Breath of the Wild?</h3>
+      <ul id="answers">
+        <li id="answer1" class="answer-btn"><button>Zelda</button></li>
+        <li id="answer2" class="answer-btn"><button>Ganondorf</button></li>
+        <li id="answer3" class="answer-btn"><button>Tingle</button></li>
+        <li id="answer4" class="answer-btn"><button>Link</button></li>
       </ul>
-      <button id="button-always"></button>
+      <button id="button-always">Start Quiz</button>
       <script src="./assets/script.js"></script>
     </main>
   </body>
