added questions and end page

--- a/index.html
+++ b/index.html
@@ -9,25 +9,42 @@
   </head>
   <body>
     <header>
-        <a href="./highscores.html" id="highscores-link">View Highscores</a>
-        <div id="timer">
-            <div id="timer-text">
-                <div id="timer-count">20</div>
-                <p>seconds remaining</p>
-            </div>
+      <a href="./highscores.html" id="highscores-link">View Highscores</a>
+      <div id="timer">
+        <div id="timer-text">
+          <div id="timer-count">20</div>
+          <p>seconds remaining</p>
         </div>
+      </div>
     </header>
-    <main id= "main">
+    <main id="main">
       <h1 id="quiz-title">Quiz Challenge!</h1>
-      <p id= "p-below">Come see if you have what it takes to finish my quiz with your sanity intact!</p>
-      <h3 id= "question">What is the name of the male protagonist in The Legend of Zelda: Breath of the Wild?</h3>
+      <p id="p-below">
+        Come see if you have what it takes to finish my quiz with your sanity
+        intact!
+      </p>
+      <h3 id="question">
+        What is the name of the male protagonist in The Legend of Zelda: Breath
+        of the Wild?
+      </h3>
       <ul id="answers">
-        <li id="answer1" class="answer-btn"><button>Zelda</button></li>
-        <li id="answer2" class="answer-btn"><button>Ganondorf</button></li>
-        <li id="answer3" class="answer-btn"><button>Tingle</button></li>
-        <li id="answer4" class="answer-btn"><button>Link</button></li>
+        <li class="answer-btn"><button id="answer1">Link</button></li>
+        <li class="answer-btn"><button id="answer2">Ganondorf</button></li>
+        <li class="answer-btn"><button id="answer3">Tingle</button></li>
+        <li class="answer-btn"><button id="answer4">Zelda</button></li>
       </ul>
+      <h3 id="answer-result"></h3>
+      <div id="score-indicator">
+        <p>Your Score Was:</p>
+        <p id="score">0</p>
+        <p>%/100%</p>
+      </div>
       <button id="button-always">Start Quiz</button>
+      <div id="initials-section">
+        <p>Enter Initials Here:</p>
+        <input type="text" name="" id="initials" />
+        <button type="submit" id="submitInitials">Submit</button>
+      </div>
       <script src="./assets/script.js"></script>
     </main>
   </body>
