added submit button for initials to end page and added time up page

--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
       </div>
       <button id="button-always">Start Quiz</button>
       <div id="initials-section">
-        <p>Enter Initials Here:</p>
-        <input type="text" name="" id="initials" />
-        <button type="submit" id="submitInitials">Submit</button>
+        <input type="text" name="" id="initials" maxlength="4" placeholder="Enter Initials Here!"/>
+        <button type="submit" id="submit-initials">Submit</button>
       </div>
       <script src="./assets/script.js"></script>
     </main>
