--- a/highscores.html
+++ b/highscores.html
@@ -8,7 +8,17 @@
     <title>Highscores</title>
 </head>
 <body>
-    
+    <main>
+        <h1 class = main>Highscores</h1>
+        <ul >
+            <li id="scores">None!</li>
+        </ul>
+        <div id="bottom-hs-btns">
+            <a href="./index.html"><button id = "go-back-btn">Go Back</button></a>
+            <button id= "clear-highscores-btn">Clear Highscores</button>
+        </div>
+    </main>
+
 
     <script src="./assets/script.js"></script>
 </body>
