--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
       </div>
     </header>
-    <main id="main">
+    <main class ="main">
       <h1 id="quiz-title">Quiz Challenge!</h1>
       <p id="p-below">
         Come see if you have what it takes to finish my quiz with your sanity
